<resources>
    <string name="app_name" translatable="false">StudentNotes</string>
    <string name="plus_button" translatable="false">+</string>
    <string name="subject_name_hint">Type in subject name</string>
    <string name="subject_desc_hint">Type in subject description</string>
    <string name="create_subject_button">CREATE SUBJECT</string>
    <string name="edit_subject_button">EDIT SUBJECT</string>
    <string name="subject_background">Subject Background</string>
    <string name="expand_subject_button">Expand subject</string>

    <string name="edit_note_button">EDIT NOTE</string>
    <string name="delete_note_button">DELETE NOTE</string>

    <string name="capture_image">Capture Image</string>
    <string name="convert_to_text">Convert to Text</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>

    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="reset">RESET</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>

    <string name="emailReq">Email address is required!</string>
    <string name="emailValid">Please provide valid email!</string>
    <string name="passReq">Password is required!</string>
    <string name="passValid">Minimum password length should be 8 characters!</string>
    <string name="registerSuccess">User has been registered successfully! Check your email to verify your account!</string>
    <string name="registerFailed">Failed to registered!</string>
    <string name="loginSuccess">Logged successfully!</string>
    <string name="mailVerify">Please verify your email!</string>
    <string name="loginFailed">Failed to login! Please check your credentials!</string>
    <string name="language">Language</string>

    <string-array name="font_size_array">
        <item>16</item>
        <item>22</item>
        <item>28</item>
        <item>34</item>
        <item>40</item>
        <item>46</item>
        <item>52</item>
    </string-array>
    <string-array name="heading_array">
        <item>Select Heading</item>
        <item>Heading 1</item>
        <item>Heading 2</item>
        <item>Heading 3</item>
        <item>Heading 4</item>
    </string-array>

    <string-array name="language_array">
        <item>English</item>
        <item>Polski</item>
    </string-array>

</resources>