<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginStart="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/noteCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="200dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/noteImageBG"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimaryVariant"
            android:contentDescription="@string/subject_background" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete_note_button"
            android:src="@drawable/ic_baseline_delete_32"
            android:background="@null"
            android:layout_margin="10dp"
            android:layout_gravity="end"/>

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/edit_subject_button"
            android:src="@drawable/ic_baseline_edit_32"
            android:background="@null"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"/>

        <TextView
            android:id="@+id/noteNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnSecondary"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>